main navigation overlap fixed, responsive 600px -> 2560+

--- a/src/app/nav/nav-main/nav-main.component.scss
+++ b/src/app/nav/nav-main/nav-main.component.scss
@@ -1,13 +1,42 @@
 @import "../../../scss_mixins";
 @import "../../../scss_variables";
 
+$height_NavMain: 5.5em;
+$height_NavMain_Mid: 7em;
+$height_NavMain_Wide: 7.5em;
+
+$width_SignPost: 14px;
+$width_SignPost_Wide: 20px;      // native image size 20x300px
+
+$height_SignPostLow: 5em;
+$height_SignPostHigh: 8em;
+$height_SignPostLow_Wide: 5em;
+$height_SignPostHigh_Wide: 8em;
+
+$margin_SignPostLow: 2em;
+$margin_SignPostHigh: 0em;
+$margin_SignPostLow_Mid: 2.5em;
+$margin_SignPostHigh_Mid: 0em;
+$margin_SignPostLow_Wide: 3em;
+$margin_SignPostHigh_Wide: 0em;
+
+$width_NavSignPadding: 4%;      // magic number to align signs w/signposts
+
 nav {
     @if $debug_layout { background: $color_debug4; }
-    //overflow: hidden;
-    //display: none;
+    
+    position: relative;
+    height: $height_NavMain;
+    @media screen and (min-width: $width_Screen800) { height: $height_NavMain_Mid; }
+    @media screen and (min-width: $width_Screen1680) { height: $height_NavMain_Wide; }
+    width: 100%;
 
     ul {
-        position: relative;
+        position: absolute;
+        height: $height_NavMain;
+        @media screen and (min-width: $width_Screen1440) { height: $height_NavMain_Wide; }
+        width: 100%;
+
         z-index: 0;
         display: flex;
         justify-content: space-between;
@@ -16,33 +45,63 @@ nav {
         margin: 0;
         padding: 0;
 
+        &.signPosts {
+            li {
+                flex: 1;
+                background: transparent url('../../../assets/img/signPost.png') no-repeat 50% 0;
+                //background-size: $width_SignPost auto;
+                background-size: 20% auto;
+                //@media screen and (min-width: $width_Screen1440) { background-size: $width_SignPost_Wide auto; }
+            }
+        }
+
+        &.signs {
+            //padding: 0 2.25em;
+            padding: 0 $width_NavSignPadding;  // todo: way to avoid this? li of signs need to have no width to prevent overlap (can't click on overlapped part of element)
+            li {
+                @if $debug_layout { border: 1px solid red; }
+            }
+        }
+
         li {
-            //position: relative;
+            position: relative;
+            display: block;
             top: 0.25em;
-            flex: 1;
-            //z-index: 1;
-            min-height: 5em;
-            margin-top: 3em;
+            flex: none;
+            z-index: 1;
             
-            background: transparent url('../../../assets/img/signPost.png') no-repeat 50% 0;
+            height: $height_SignPostLow;
+            @media screen and (min-width: $width_Screen1440) { height: $height_SignPostLow_Wide; }
+            
+            margin-top: $margin_SignPostLow;
+            @media screen and (min-width: $width_Screen800) { margin-top: $margin_SignPostLow_Mid; }
+            @media screen and (min-width: $width_Screen1440) { margin-top: $margin_SignPostLow_Wide; }
             
             transform: rotateZ(2deg);
 
             &:nth-child(even) { 
-               min-height: 8em;
-               margin-top: 0;
-               transform: rotateZ(-3deg);
-               a { 
-                   //transform: translateX(-50%) rotateZ(-2deg);
-                   background: transparent url('../../../assets/img/signRight.png') no-repeat;
-                   background-size: 100% 100%;
+                
+                height: $height_SignPostHigh;
+                @media screen and (min-width: $width_Screen1440) { height: $height_SignPostHigh_Wide; }
+                
+                margin-top: $margin_SignPostHigh;
+                @media screen and (min-width: $width_Screen800) { margin-top: $margin_SignPostHigh_Mid; }
+                @media screen and (min-width: $width_Screen1440) { height: $height_SignPostHigh_Wide; }
+            
+                transform: rotateZ(-3deg);
+
+                a { 
+                    //transform: translateX(-50%) rotateZ(-2deg);
+                    background: transparent url('../../../assets/img/signRight.png') no-repeat;
+                    background-size: 100% 100%;
                 }
             }
             &:nth-child(3n) { transform: rotateZ(-2deg); }
-            &:nth-child(4n) { transform: rotateZ(3deg); }
-            
+            &:nth-child(4n) { transform: rotateZ(3deg); } 
+            &:nth-child(10n) { transform: rotateZ(0deg); } 
             
             a {
+                flex: 1 0 auto;
                 display: block;
                 text-align: center;
                 margin: 0.75em 0 0 0;
@@ -56,24 +115,10 @@ nav {
                 z-index: 2;
                 background: transparent url('../../../assets/img/signLeft.png') no-repeat;
                 background-size: 100% 100%;
-                //font-size: 1.5em;
-                font-size: 0.9em;
-                @media screen and (min-width: $width_Screen480) { font-size: 0.8em; }
-                @media screen and (min-width: $width_Screen640) { font-size: 0.9em; }
-                @media screen and (min-width: $width_Screen800) { font-size: 1.0em; }
-                @media screen and (min-width: $width_Screen960) { font-size: 1.1em; }
-                @media screen and (min-width: $width_Screen1024) { font-size: 1.3em; }
-                @media screen and (min-width: $width_Screen1280) { font-size: 1.4em; }
-                @media screen and (min-width: $width_Screen1440) { font-size: 1.1em; }
-                @media screen and (min-width: $width_Screen1680) { font-size: 1.3em; }
-                @media screen and (min-width: $width_Screen1920) { font-size: 1.4em; }
-                @media screen and (min-width: $width_Screen2560) { font-size: 1.6em; }
                 font-weight: bold;
                 text-shadow: -1px -1px 2px $color_DiveGrey, -1px -1px 1px $color_DiveBlack;//, 0px 0px 0px #555;
                 letter-spacing: 1px;
                 color: #777;
-                //color: $color_TextRed;
-                //color: #a81919;
                 transition: all 0.1s ease-in-out;
                 &:hover {
                     color: $color_TextRed;
@@ -81,10 +126,21 @@ nav {
                     text-shadow: -1px -1px 2px $color_DiveGrey, -1px -1px 1px $color_DiveBlack;//, 0px 0px 10px #f99;
                     transform: translateX(-50%);// scale(1.1);
                 }
-    //             height: 113px;
-    //             width: 163px;
-    //             color: #29e;
+                //font-size: 1.5em;
+                font-size: 0.9em;
+                @media screen and (min-width: $width_Screen480) { font-size: 0.8em; }
+                @media screen and (min-width: $width_Screen640) { font-size: 0.8em; }
+                @media screen and (min-width: $width_Screen800) { font-size: 1.0em; }
+                @media screen and (min-width: $width_Screen960) { font-size: 1.1em; }
+                @media screen and (min-width: $width_Screen1024) { font-size: 1.2em; }
+                @media screen and (min-width: $width_Screen1280) { font-size: 1.25em; }
+                @media screen and (min-width: $width_Screen1440) { font-size: 1.25em; }
+                @media screen and (min-width: $width_Screen1680) { font-size: 1.3em; }
+                @media screen and (min-width: $width_Screen1920) { font-size: 1.4em; }
+                @media screen and (min-width: $width_Screen2560) { font-size: 1.6em; }
             }
         }
+
+        
     }
 }
