--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,9 +52,10 @@ a {
 
 .biColorText {
     text-shadow: 1px 1px 2px #444;
-  span {
-    color: $color_TextRed;
-  }
+    span {
+        white-space: nowrap;
+        color: $color_TextRed;
+    }
 }
 
 .diveFont { 
